*
Release 1.1 Start 14/02/2021
03/03/2021
01. timeoutread, timeoutwrite - fix data types

* Sunday 14 February 2021 11:27:21 PM IST
Release 1.0 Start 21/05/2020
01. added --release option to specify release on command line
- 13/09/2020
02. libqmail.spec: added Provides: qmail-libs
- 15/09/2020
03. added mess822, commands, rewritehost, sconfig functions from indimail-mta
- 16/09/2020
04. FreeBSD fixes
- 01/10/2020
05. Darwin Port (fmt_ushort.c, default.configure, configure.ac)
- 04/10/2020
06. fixed broken crypt(3) implemetation on Darwin Mac OS X
07. reorgnized directory structure. All qmail functions moved to 'base'
08. textcode/fmt_utf8.c: updated with upstream libowfat-0.32
- 09/10/2020
09. replaced fmt_tohex() with tohex()
10. global.h, hmac_md5.c, hmac_ripemd.c, md5.c, md5.h: replaced updated
    functions from indimail-mta
- 18/10/2020
11. alloc_re.c: fix overwriting unallocate memory location when
    new_size < old_size
- 22/10/2020
12. Remove definition of INSTALL program in configure.ac, Makefile.am
- 22/11/2020
13. added tai_add.c. tai_uint.c
14. use const keyword
- 24/11/2020
15. added readclose(), openreadclose()
16. added noreturn attribute for strerr_die()
17. removed exit.h
- 26/11/2020
18. constmap.c: allow delimiter to be changed from the default colon
    character.
19. added man page for constmap function
20. constmap.c, constmap.h: added constmap_index(), constmap_get() functions
- 28/11/2020
31. +HeaderName feature by Erwin Hoffman: display all headers which have
    HeaderName as the initial text
- 02/12/2020
32. changed return type of alloc to void *
- 11/01/2021
33. libqmail.spec: removed redhat-lsb-core from BuildRequires