@@ -24,10 +24,7 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: libqmail
-        path: |
-          ~/*.tar.gz
-          ~/*.spec
-          ~/*.dsc
+        path: ~/stage
     - shell: bash
       name: trigger_obs
       run: |
@@ -35,8 +32,9 @@ jobs:
         echo "${{secrets.sf_private_key}}" > ~/.private_key
         chmod 600 ~/.private_key
         echo "${{secrets.sf_known_hosts}}" > ~/.ssh/known_hosts
-        cd ~
-        tar cvfz $GITHUB_WORKSPACE/libqmail-obs.tar.gz *.tar.gz *.spec *.dsc
+        cd ~/stage
+        tar cvfz $GITHUB_WORKSPACE/libqmail-obs.tar.gz *
         # copy to /home/frs/project/indimail/github
         scp -q -i ~/.private_key $GITHUB_WORKSPACE/libqmail-obs.tar.gz  "${{secrets.sf_user}}:${{secrets.sf_upload_path}}"
         rm -f ~/.private_key ~/.ssh/known_hosts $GITHUB_WORKSPACE/libqmail-obs.tar.gz
+        rm -rf ~/stage
